# kl-kernel-logic

./: .gitignore  CHANGELOG.md  README.md  push-repo.ps1  pyproject.toml
.github/workflows/: tests.yml
docs/: 01-kl-architecture.md  02-foundational-operations.md  api_reference.md  contract_test_matrix.md  execution_theory_in_code.md  foundational-execution-patterns.md  kernel_contract.md  kl-architecture.md  kl_execution_theory_v1.md  release_procedure.md  roadmap.md
src/kl_kernel_logic/: __init__.py  audit.py  cael.py  execution_context.py  kernel.py  policy.py  psi.py  psi_envelope.py
src/kl_kernel_logic/examples/: text_simplify.py
src/kl_kernel_logic/examples_foundations/: __init__.py  operations.py  runners.py
tests/: test_audit_report.py  test_axioms.py  test_cael.py  test_constraints.py  test_foundations_flows.py  test_kernel.py  test_kernel_basic.py  test_kernel_contracts.py  test_policy_adapter_and_timeout.py  test_policy_templates.py  test_psi.py  test_psi_validation.py  test_public_api.py  test_runtime_ms.py
